Added selector to page and center content

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
 body {
     background-color: rgba(0,127,255, 0.5);
 }
+
+.selector-select {
+    text-align: center;
+    margin-left: 50%;
+}
+
+#map-svg {
+    margin-left: 15%;
+}
