Selector and loadData()
Added selector that changes source of data. Made code more modular and flow better.

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     background-color: rgba(0,127,255, 0.5);
 }
 
-.selector-select {
+#selector-select {
     text-align: center;
     margin-left: 50%;
 }
