--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,21 @@ body {
 }
 
 .chart-div {
+    position: relative;
+    top: 20px;
     margin-bottom: 50px;
+}
+
+h3{
+    width: 70%;
+    margin-left: 15%;
+    margin-right: 15%;
 }
 
 .tooltip {
     background-color: rgba(0,0,0,0.7);
     color: white;
+    font-family: monospace;
     padding: 10px;
     border-radius: 10px;
 }
@@ -28,7 +37,30 @@ body {
 .xAxis {
     font-size: 10px;
 }
+
 #selector-div {
     position: fixed;
-    left: 10%;
+    left: 5%;
+    height: 100%;
+    z-index: 1;
+}
+
+a {
+    color: black;
+}
+
+button {
+    border-radius: 5px;
+}
+
+.navbar {
+    /*font-size: 16px;*/
+}
+
+i {
+    width: 25px;
+}
+
+#legend {
+    margin-top: 20px;
 }
